--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>BazFlipper</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="input-group">
-            <label for="marginSlider">Margin:</label>
-            <input type="range" id="marginSlider" min="0" max="100" step="1" value="15">
-            <span id="marginValue">15%</span>
+            <label for="searchBox" data-description="Filter products based on product ID.">Search:</label>
+            <input type="text" id="searchBox" placeholder="Search products">
         </div>
 
         <div class="input-group">
-            <label for="buyVolumeThreshold">Buy Volume Threshold:</label>
+            <label for="marginInput"
+                data-description="Set the minimum margin percentage between buy and sell prices.">Margin (%):</label>
+            <input type="number" id="marginInput" value="15">
+        </div>
+
+        <div class="input-group">
+            <label for="buyVolumeThreshold" data-description="Set the minimum buy volume for filtering products.">Buy
+                Volume Threshold:</label>
             <input type="number" id="buyVolumeThreshold" value="7500">
         </div>
 
         <div class="input-group">
-            <label for="sellVolumeThreshold">Sell Volume Threshold:</label>
-            <input type="number" id="sellVolumeThreshold" value="7500">
+            <label for="sellVolumeThreshold" data-description="Set the maximum sell volume for filtering products.">Sell
+                Volume Threshold:</label>
+            <input type="number" id="sellVolumeThreshold" value="200">
         </div>
 
         <div class="input-group">
-            <label for="buyPriceThreshold">Minimum Buy Price:</label>
+            <label for="buyPriceThreshold" data-description="Set the minimum buy price for filtering products.">Minimum
+                Buy Price:</label>
             <input type="number" id="buyPriceThreshold" value="100000">
         </div>
 
         <ul id="productList"></ul>
+
+        <button id="refreshButton">Refresh</button>
     </div>
     <script src="renderer.js"></script>
 </body>
+
 </html>
